--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -1106,10 +1106,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline([\n",
+    "    ('bow',CountVectorizer(analyzer=text_process)),\n",
+    "    ('tfidf',TfidfTransformer()),\n",
+    "    ('classifier',MultinomialNB())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('bow',\n",
+       "                 CountVectorizer(analyzer=<function text_process at 0x000002B9E28465E0>)),\n",
+       "                ('tfidf', TfidfTransformer()),\n",
+       "                ('classifier', MultinomialNB())])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.fit(msg_train,label_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = pipeline.predict(msg_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report,confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ham       0.96      1.00      0.98      1475\n",
+      "        spam       1.00      0.65      0.79       197\n",
+      "\n",
+      "    accuracy                           0.96      1672\n",
+      "   macro avg       0.98      0.83      0.88      1672\n",
+      "weighted avg       0.96      0.96      0.96      1672\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(label_test,predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1475    0]\n",
+      " [  68  129]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(label_test,predictions))"
+   ]
   }
  ],
  "metadata": {
